--- a/imprint.html
+++ b/imprint.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div class="imprint-container">
-    <a href="/public" class="back-button" tabindex="0" aria-label="Zurück zur Startseite">
+    <a href="./" class="back-button" tabindex="0" aria-label="Zurück zur Startseite">
         ← Zurück zur Startseite
     </a>
 
@@ -241,7 +241,7 @@
 
     <footer class="imprint-footer">
         <div class="footer-navigation">
-            <a href="/public" class="footer-nav-link" tabindex="0">← Startseite</a>
+            <a href="./" class="footer-nav-link" tabindex="0">← Startseite</a>
             <a href="/privacy.html" class="footer-nav-link" tabindex="0">📄 Datenschutz</a>
             <a href="/jugendschutz.html" class="footer-nav-link" tabindex="0">🔞 Jugendschutz</a>
         </div>
