--- a/privacy.html
+++ b/privacy.html
@@ -41,7 +41,7 @@
 </noscript>
 
 <div class="privacy-container">
-    <a href="/public" class="back-button" aria-label="Zurück zur Startseite" tabindex="0">
+    <a href="./" class="back-button" aria-label="Zurück zur Startseite" tabindex="0">
         ← Zurück zur Startseite
     </a>
 
@@ -597,7 +597,7 @@
 
     <footer class="privacy-footer">
         <div class="footer-navigation">
-            <a href="/public" class="footer-nav-link" tabindex="0">← Startseite</a>
+            <a href="./" class="footer-nav-link" tabindex="0">← Startseite</a>
             <a href="/imprint.html" class="footer-nav-link" tabindex="0">📋 Impressum</a>
             <a href="/jugendschutz.html" class="footer-nav-link" tabindex="0">🔞 Jugendschutz</a>
         </div>
