Refactor FSK16 access: always unlocked for all users, update age verification flows, UI, and server logic; harden storage.rules with filename validation, temp file isolation, and DSGVO lifecycle policy; enhance category-selection UI and add settings modal integration

--- a/multiplayer-category-selection.html
+++ b/multiplayer-category-selection.html
@@ -260,20 +260,20 @@
 
             <!-- Altersverifikation Section -->
             <section class="settings-section">
-                <h3>🛡️ Altersverifikation</h3>
+                <h3>🔞 Altersverifikation</h3>
                 <div class="settings-item">
-                    <label for="birthdate-input">Geburtsdatum (Ü18 Verifikation)</label>
+                    <label for="birthdate-input">Geburtsdatum</label>
                     <div class="input-group">
-                        <input type="date" id="birthdate-input" class="settings-input" max="2026-01-12">
-                        <button class="btn-save" id="verify-age-btn" type="button">Verifizieren</button>
+                        <input type="date" id="birthdate-input" class="settings-input" max="2026-01-21">
+                        <button class="btn-primary" id="verify-age-btn" type="button">Verifizieren</button>
                     </div>
-                    <p class="settings-hint">Erforderlich für FSK 16/18 Inhalte</p>
+                    <p class="settings-hint">Erforderlich für FSK 18 Inhalte</p>
                 </div>
                 <div class="settings-item">
                     <label>FSK Zugriff</label>
                     <div class="fsk-status" id="fsk-status">
                         <span class="fsk-badge fsk-0">FSK 0</span>
-                        <span class="fsk-badge fsk-16" id="fsk16-badge-settings" style="display:none;">FSK 16</span>
+                        <span class="fsk-badge fsk-16">FSK 16</span>
                         <span class="fsk-badge fsk-18" id="fsk18-badge-settings" style="display:none;">FSK 18</span>
                     </div>
                 </div>
